--- a/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
+++ b/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
@@ -2,7 +2,10 @@
 <div class="card">
     <div class="card-header bg-light">
         <h6 class="card-title">
-            Trend for location: <strong>@Model.location.Trim()</strong> logcode: <strong>@Model.errornum</strong> logtext: <strong>@Model.logtext.Trim()</strong>
+            Trend for location:
+            <strong>@Model.location.Trim()</strong> logcode:
+            <strong>@Model.errornum</strong> logtext:
+            <strong>@Model.logtext.Trim()</strong>
             <a class="fas fa-wrench text-black-50" href="#" data-toggle="popover" data-placement="bottom" id="ErrorTrentCharOptionsPopover"></a>
             <a class="far fa-calendar-alt text-black-50" id="ErrorTrentCharDatepicker" href="#"></a>
             <span class="clickable float-right text-black-50"><i class="fas fa-chevron-circle-up fa-1"></i></span>
@@ -25,7 +28,7 @@
             </div>
 
             <div class="col-9">
-                <div class="btn-group" id="btnGrouping" role="group" data-toggle="tooltip" data-placement="bottom" title="Set how the graph groups the data" >
+                <div class="btn-group" id="btnGrouping" role="group" data-toggle="tooltip" data-placement="bottom" title="Set how the graph groups the data">
                     <button type="button" class="btn  btn-sm btn-secondary active" id="btnGroupingAuto">auto</button>
                     <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingHour">hour</button>
                     <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingDay">day</button>
