--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
@@ -90,6 +90,8 @@
 
     //get chart data
     function getcontrolchartData() {
+        //hide popover
+        $('.popover').popover('hide');
         //spinner
         $("#controlchartContainer").html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>");
         //make ajax request
