--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
@@ -18,6 +18,8 @@
     columns.Add(c => c.alertType).Titled("alertType");
     columns.Add(c => c.enabled).Titled("enabled");
     columns.Add(c => c.discription).Titled("discription");
+    columns.Add(c => c.c_schedule.name).Titled("schedule");
+    columns.Add(c => c.ordinal).Titled("ordinal");
     columns.Add(c => c.enableSMS).Titled("enableSMS");
     columns.Add(c => c.c_smsSystem.system).Titled("SMSsystem");
     columns.Add(c => c.smsOnRetrigger).Titled("smsOnRetrigger").Css("d-none d-lg-table-cell");
