--- a/EqUiWebUi/Content/TableRowStyles.css
+++ b/EqUiWebUi/Content/TableRowStyles.css
@@ -37,6 +37,18 @@
     background-color: rgba(243, 124, 9, 0.87);
 }
 
+.TableLogtypeGreen {
+    background-color: #49d112
+}
+
+.TableLogtypeRed {
+    background-color: #f21a1a;
+}
+
+.TableLogtypeYellow {
+    background-color: #d6d613;
+}
+
 /*animations (Alerts)*/
 .ani_BlinkPink {
     background-color: #d851ff; /*set the background color in here so if the browser does not support animation we still have style*/
