--- a/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/Carousel.cshtml
+++ b/EqUiWebUi/Areas/PlcSupervisie/Views/Screenshot/Carousel.cshtml
@@ -15,6 +15,12 @@
         <div class="carousel-item">
             <img class="d-block img-fluid" src="http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/VCG_CMA40_GA3SUPERVNCW01__04_Conveyors.Pd_.jpg" alt="5 slide">
         </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/VCG_CMA40_GA3SUPERVNCW01__07_Conveyors.Pd_.jpg" alt="6 slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/bop.jpg" alt="7 slide">
+        </div>
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
         <span class="fas fa-caret-left fa-6x" style="color:tomato" aria-hidden="true"></span>
