--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -34,6 +34,6 @@
     <div class="card-body">
         <p><a href="http://gensvw1051:5601/app/kibana#/discover?_g=()" class="btn btn-danger btn-sm">Kibana (VIDS) &raquo;</a>Elastic search tool to search the VIDS database</p>
         <p><a href="http://andonscreendumps.gen.volvocars.net/" class="btn btn-danger btn-sm">Screendumps (ANDON) &raquo;</a>All andon screen dumps (non x20)</p>
-
+        <p><a href="http://gensvw1162/XManagerWeb/" class="btn btn-danger btn-sm">Screendumps (ANDON) &raquo;</a>All andon screen dumps (x20) user:reader pwd:Reader1</p>
     </div>
 </div>
