changed helpfile link

--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -57,10 +57,11 @@
                         </li>
                         <li class="dropdown-divider"></li>
                         <li class="dropdown-item">
-                            <a href="https://sway.com/csCS9cdjEpcpPhw0?ref=Link">VSTO Excel Manual</a>
+                            <a href="https://sway.com/csCS9cdjEpcpPhw0?ref=Link">VSTO Excel (Manual)</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="https://sharepoint.volvocars.net/sites/vcg_ga_aaosr/SitePages/EQDB.aspx">VSTO Excel plugin</a>
+                            <a href="\\gnlsnm0101.gen.volvocars.net\proj\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE\ExcelAddInEquipmentDatabase.vsto">VSTO Excel (instal)</a>
+                            <a href="@Url.Action("ShowWiki", "Wikis", new { area = "", id = 5 }, null)"><i class="fas fa-question-circle text-primary"></i></a>
                         </li>
                         <li class="dropdown-divider"></li>
                         <li class="dropdown-item">
