changed tableau links

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -188,6 +188,21 @@
 </div>
 
 <hr />
+<div class="card">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Productie
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body">
+
+        <p><a href="~/tableau/EmbeddedDesktop?workbook=Kostenschrootonderdelen&sheet=Dashboard1" class="btn btn-primary btn-sm">Schrootkosten &raquo;</a></p>
+        <p><a href="~/tableau/EmbeddedDesktop?workbook=PBM_Augustus2018&sheet=Dashboard1" class="btn btn-primary btn-sm">PBMkosten &raquo;</a></p>
+    </div>
+</div>
+
+<hr />
 <div class="alert alert-info">
     <h3>The next card is for 4K displays!</h3>
 </div>
