--- a/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/PloegRapportWebgrid.cshtml
@@ -22,11 +22,11 @@
         var supervisieIsExpanded = false;
         //helper function to load info modal
         function LoadMoreInfo(data) {
-                    var urlMoreInfo = '@Url.Action("_Moreinfo","Table")?location=' + encodeURIComponent(data.Location)
-                        + '&errornum=' + encodeURIComponent(data.Logcode)
-                        + '&refid=' + encodeURIComponent(data.refId)
-                        + '&logtype=' + encodeURIComponent(data.Logtype)
-                        + '&logtext=' + encodeURIComponent(data.logtext)
+                    var urlMoreInfo = '@Url.Action("_Moreinfo","Table")?location=' + encodeURIComponent(data["location"])
+                        + '&errornum=' + encodeURIComponent(data["logcode"])
+                        + '&refid=' + encodeURIComponent(data["ref-id"])
+                        + '&logtype=' + encodeURIComponent(data["logtype"])
+                        + '&logtext=' + encodeURIComponent(data["logtext"])
                     //launch modal
                     $('#MyModal').removeData('bs.modal');
                     $('#MyModal').modal({ show: true });
@@ -40,7 +40,7 @@
             reload: true, // Grid reload indicator
             //if rowclicked and count is 1 show popup else expand the count and load a filterd supervision grid.
             rowClicked: function (row, data, e) {
-                if (data.Count == "1") {
+                if (data["count"] == "1") {
                     LoadMoreInfo(data);
                 }
                 else {
@@ -64,16 +64,10 @@
                         $('#SupervisieGrid').mvcgrid({
                             sourceUrl: '@Url.Action("_supervisie")', // Grid source url string
                             requestType: 'get', // Ajax grid request type
-                            data: { locationRootFilter: data.LocationTree},
+                            data: { locationRootFilter: data["location-tree"]},
                             reload: true, // Grid reload indicator
                             rowClicked: function (row, data, e) {
                                 LoadMoreInfo(data);
-                            },
-                            reloadStarted: function () {
-                                console.log("reload start");
-                            },
-                            reloadEnded: function () {
-                                console.log("reload done");
                             },
                             reloadFailed: function (result) {
                                 console.log(result);
@@ -81,12 +75,6 @@
                             }
                         });
                 }
-            },
-            reloadStarted: function () {
-                console.log("reload start");
-            },
-            reloadEnded: function () {
-                console.log("reload done");
             },
             reloadFailed: function (result) {
                 console.log(result);
