--- a/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
@@ -24,11 +24,11 @@
         requestType: 'get', // Ajax grid request type
         reload: true, // Grid reload indicator
         rowClicked: function (row, data, e) {
-            var urlMoreInfo = '@Url.Action("_Moreinfo", "Table")?location=' + encodeURIComponent(data.Location)
-                + '&errornum=' + encodeURIComponent(data.Logcode)
-                + '&refid=' + encodeURIComponent(data.refId)
-                + '&logtype=' + encodeURIComponent(data.Logtype)
-                + '&logtext=' + encodeURIComponent(data.logtext);
+            var urlMoreInfo = '@Url.Action("_Moreinfo", "Table")?location=' + encodeURIComponent(data["location"])
+                + '&errornum=' + encodeURIComponent(data["logcode"])
+                + '&refid=' + encodeURIComponent(data["ref-id"])
+                + '&logtype=' + encodeURIComponent(data["logtype"])
+                + '&logtext=' + encodeURIComponent(data["logtext"]);
                 //launch modal
                 $('#MyModal').removeData('bs.modal');
                 $('#MyModal').modal({ show: true });
