--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
@@ -16,7 +16,7 @@
       .Filterable(false)
       .Sortable(false)
       .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")).Css("XXd-none XXd-md-block"); //need to add the toolnumber in die model
-}).Sortable().Filterable(true).Pageable(pager =>
+}).Sortable().Filterable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
 }).Empty("No data found").Css("table-hover")
