--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipwearBeforeChangeGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipwearBeforeChangeGrid.cshtml
@@ -17,7 +17,7 @@
       .Filterable(false)
       .Sortable(false)
       .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")); //need to add the toolnumber in die model
-}).Sortable().Filterable(true).Pageable(pager =>
+}).Sortable().Filterable().Pageable(pager =>
 {
    pager.RowsPerPage = 20;
 }).Empty("No data found").Css("table-hover")
